--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
       <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
       <nav>
         <a href="{{ '/' | relative_url }}">Home</a> |
-        <a href="{{ '/about' | relative_url }}">About</a>
+	<a href="{{ '/supervisions/' | relative_url }}">Supervisions</a>
       </nav>
     </header>
 
