--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,8 +63,7 @@
     <header>
       <nav>
         <a href="{{ '/' | relative_url }}">Home</a> |
-        <a href="{{ '/about' | relative_url }}">About</a> |
-        <a href="{{ '/supervisions/' | relative_url }}">Supervisions</a>
+        <a href="{{ '/teaching/' | relative_url }}">Teaching</a>
       </nav>
     </header>
 
