--- a/assets/style.css
+++ b/assets/style.css
@@ -17,15 +17,10 @@ body {
 }
 
 header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
   background: black;
   color: white;
   padding: 0.7em 0;
   text-align: center;
-  z-index: 1000;
 }
 
 header a {
@@ -34,10 +29,14 @@ header a {
   margin: 0 10px;
 }
 
+header a:hover {
+  text-decoration: underline;
+}
+
 main {
   flex: 1;
   max-width: 800px;
-  margin: 70px auto 0; /* spacing below header */
+  margin: 2em auto;
   padding: 1em;
   width: 100%;
 }
@@ -47,5 +46,5 @@ footer {
   color: white;
   text-align: center;
   padding: 0.7em 0;
-  margin-top: auto; /* pushes footer to the bottom if page is short */
+  margin-top: auto; /* keeps it at bottom when page is short */
 }
