--- a/assets/style.css
+++ b/assets/style.css
@@ -39,6 +39,7 @@ main {
   margin: 2em auto;
   padding: 1em;
   width: 100%;
+  white-space: pre-line;
 }
 
 footer {
@@ -50,6 +51,6 @@ footer {
 }
 
 main ul, main ol {
-  margin-left: 1.5em;   /* indent lists neatly */
-  padding-left: 1.5em;  /* ensures bullets/numbers align inside content */
+  margin-left: 0.5em;   /* indent lists neatly */
+  padding-left: 0.5em;  /* ensures bullets/numbers align inside content */
 }
