--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     </main>
 
     <footer>
-      &copy; {{ site.time | date: '%Y' }} {{ site.title }}
+      &copy; {{ site.time | date: '%Y' }} Radzim
     </footer>
   </body>
 </html>
